# ETI

./: .gitignore
AKo/Lab2/Lab2/: Lab2.sln  Lab2.vcxproj  Source.asm
ALGEBRA/: grupa_S3.py  grupa_S3.txt
BD/: ERD+Realizacja copy.odt  ERD+Realizacja.odt  ERD+Realizacja_TODO.txt  Projekt.odt  Zarys.md
HIH/dla_studenta/: CzytajTo.txt
HIH/dla_studenta/Help_me/: Style.css  Szablon.htm  Thumbs.db
HIH/dla_studenta/L1_F0_01/: L1_F0_01.htm  Thumbs.db
HIH/dla_studenta/L1_F0_02/: L1_F0_02.htm  Thumbs.db
HIH/dla_studenta/L1_F0_03/: L1_F0_03a.htm  L1_F0_03b.htm  Style.css  Thumbs.db
HIH/dla_studenta/L1_F0_04/: L1_F0_04_index.htm  L1_F0_04a.htm  L1_F0_04b.htm  Style.css  Thumbs.db
JP/Ada/: symulacja.adb  symulacjafabrykirowerow.adb
JP/Haskell/: 12  12.hi  12.hs  27  27.hi  27.hs  X  X.hi  X.hs
MN/MN1/: MN1-Copy1.ipynb  MN1.ipynb  metody_numeryczne_projekt1.py
MN/MN1/MN1/: main.cpp
MN/MN1/MN1.xcodeproj/: project.pbxproj
MN/MN1/MN1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MN/MN1/MN1.xcodeproj/project.xcworkspace/xcuserdata/kuba.xcuserdatad/: UserInterfaceState.xcuserstate
POPR/: project.sh
POPR/Hello/: CMakeLists.txt  main.cpp
POPR/LO/ArkanoidSzablon/: CMakeLists.txt  main.cpp
POPR/lab2/: CMakeLists.txt  main.cpp
POPR/lab3zad7/: CMakeLists.txt  main.cpp
POPR/leftshift/: CMakeLists.txt  main.cpp
POPR/max_diff/: CMakeLists.txt  main.cpp
POPR/maxdigit/: CMakeLists.txt  main.cpp
POPR/spirala/: CMakeLists.txt  main.cpp
POPR/trzynastkowo/: CMakeLists.txt  main.cpp
WAI/: README.md
(+3 files in other folders)
